--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -35,6 +35,11 @@ dependencies:
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.8
+  intl: ^0.20.2
+  syncfusion_flutter_datepicker: ^28.1.41
+  google_fonts: ^6.2.1
+  flutter_svg: ^2.0.17
+  dotted_border: ^2.1.0
 
 dev_dependencies:
   flutter_test:
@@ -68,6 +73,9 @@ flutter:
 
   # For details regarding adding assets from package dependencies, see
   # https://flutter.dev/to/asset-from-package
+  assets:
+    - assets/images/
+    - assets/svg/
 
   # To add custom fonts to your application, add a fonts section here,
   # in this "flutter" section. Each entry in this list should have a
