--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -17,6 +17,7 @@ dependencies:
   cupertino_icons: ^1.0.8
   google_fonts: ^6.2.1
   intl: ^0.19.0
+  dio:
   syncfusion_flutter_datepicker: ^28.1.41
   flutter_svg: ^2.0.17
   dotted_border: ^2.1.0
