--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -20,6 +20,11 @@ dependencies:
   syncfusion_flutter_datepicker: ^28.1.41
   flutter_svg: ^2.0.17
   dotted_border: ^2.1.0
+  dio: ^5.8.0+1
+  pretty_dio_logger: ^1.4.0
+  bloc: ^9.0.0
+  flutter_bloc: ^9.0.0
+  file_picker: ^9.0.2
 
 dev_dependencies:
   flutter_test:
